2004-07-07  Wim Taymans  <wim@fluendo.com>

	* sys/oss/gstosselement.c: (gst_osselement_reset),
	(gst_osselement_parse_caps):
	* sys/oss/gstosselement.h:
	* sys/oss/gstosssrc.c: (gst_osssrc_get):
	Fix offset on osssrc.

2004-07-07  Wim Taymans  <wim@fluendo.com>

	* ext/theora/theora.c: (plugin_init):
	* ext/theora/theoradec.c: (theora_dec_from_granulepos),
	(theora_dec_src_query), (theora_dec_chain):
	* ext/theora/theoraenc.c: (gst_theora_enc_class_init),
	(theora_enc_sink_link), (theora_buffer_from_packet),
	(theora_push_packet), (theora_enc_chain):
	Fix theora granulepos calculation.
	Fix overflow in duration/position calculation.
	Bump rank to PRIMARY for theoradec.
	Use granulepos of last packet to calculate position.
	Set keyframe flag on buffers when needed.

2004-07-06  David Schleef  <ds@schleef.org>

	* gst/playback/Makefile.am: 'test' in bin_PROGRAMS?  Are you
	serious?  (Fixed, obviously.)

2004-07-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/LINGUAS:
	* po/cs.po:
	  added Czech translation (Miloslav Trmac)

2004-07-05  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstdecodebin.c: (gst_decode_bin_get_type),
	(gst_decode_bin_class_init), (gst_decode_bin_factory_filter),
	(compare_ranks), (gst_decode_bin_init), (gst_decode_bin_dispose),
	(find_compatibles), (close_pad_link), (try_to_link_1), (new_pad),
	(close_link), (type_found), (gst_decode_bin_set_property),
	(gst_decode_bin_get_property), (gst_decode_bin_get_event_masks),
	(gst_decode_bin_send_event), (gst_decode_bin_get_formats),
	(gst_decode_bin_convert), (gst_decode_bin_get_query_types),
	(gst_decode_bin_query), (plugin_init):
	* gst/playback/gstplaybin.c: (gst_play_bin_get_type),
	(gst_play_bin_class_init), (gst_play_bin_init),
	(gst_play_bin_dispose), (rebuild_pipeline), (get_audio_element),
	(get_video_element), (new_pad), (setup_source),
	(gst_play_bin_set_property), (gst_play_bin_get_property),
	(gst_play_bin_change_state), (gst_play_bin_add_element),